Added ctags to Makefile

--- a/gateware/Makefile
+++ b/gateware/Makefile
@@ -1,8 +1,11 @@
 
-build/top.fs:
+build/top.fs: tang_nano.py audio_selector.py
 	./tang_nano.py --dot test.png --prog
 
 clean:
 	rm -rf build
+
+ctags:
+	ctags -R .
 
 #	FIN
