integrated UI / rotary encoder

--- a/gateware/Makefile
+++ b/gateware/Makefile
@@ -1,5 +1,5 @@
 
-build/top.fs: tang_nano.py audio_selector.py
+build/top.fs: tang_nano.py audio_selector.py io_defs.py gpio.py
 	./tang_nano.py --dot test.png --prog
 
 clean:
