--- a/gateware/Makefile
+++ b/gateware/Makefile
@@ -1,6 +1,9 @@
 
-build/top.fs: tang_nano.py audio_selector.py io_defs.py gpio.py
-	./tang_nano.py --dot test.png --prog
+build/top.fs: build.py audio_selector.py io_defs.py gpio.py
+	./build.py --dot test.png --prog
+
+i9: build.py audio_selector.py io_defs.py gpio.py
+	./build.py --dot test.png --prog --platform=i9
 
 clean:
 	rm -rf build
